# bookkeeper

./: .gitignore  launch_instructions.txt  pyproject.toml  pytest_report.html  pytest_report.txt  pytest_report_compact.txt
bookkeeper/: __main__.py  simple_client.py
bookkeeper/models/: budget.py  category.py  expense.py
bookkeeper/presenter/: presenter.py
bookkeeper/repository/: abstract_repository.py  memory_repository.py  repository_factory.py  sqlite_repository.py
bookkeeper/view/: abstract_view.py  add_expense.py  budget_table.py  edit_category.py  expense_table.py  view.py  widgets.py  window.py
db/: bookkeeper.db
tests/test_models/: test_budget.py
tests/test_presenter/: test_presenter.py
tests/test_repository/: test_abstract_repository.py  test_memory_repository.py  test_sqlite_repository.py
tests/test_repository/test_db/: test.db
tests/test_view/: test_add_expense.py  test_budget_table.py  test_edit_category.py  test_expense_table.py  test_view.py  test_window.py
