[tool.poetry]
name = "pybookkeeper"
version = "0.1.0"
description = "Python app to manage your personal finances"
authors = ["Airat Nazmiev <nazmiev.ai@phystech.edu>", "MIPT"]
license = "MIT"
readme = "README.md"
packages = [{include = "bookkeeper"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12" #"^3.10"
pytest-cov = "^4.0.0"
pyside6 = "^6.6.3.1"
pytest-html = "^4.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
pylint = "^2.15.10"
flake8 = "^6.0.0"
mccabe = "^0.7.0"
pytest-env = "^1.1.3"
pytest-qt = "^4.4.0"

[tool.pytest.ini_options]  # turn off windows during testing
env = ["D:QT_QPA_PLATFORM=offscreen"]
testpaths = ["tests"]
[tool.coverage.report]
omit = ["shibokensupport/*","pyscript","signature_bootstrap.py"]

[tool.mypy]
exclude = [
    'envs/*'
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
